examples/modules/expected/0775-modules-qualified-generic-missing-member.stderr
error: namespace 'a' has no member 'Box'
  --> examples/modules/0775-modules-qualified-generic-missing-member.sx:20:9
   |
20 |     x : a.Box(i64) = .{ x = 1, y = 2 };
   |         ^^^^^^^^^^
